--- a/Frameworks/Core/ERDirectToWeb/.classpath
+++ b/Frameworks/Core/ERDirectToWeb/.classpath
@@ -15,5 +15,6 @@
 	<classpathentry exported="true" kind="con" path="WOFramework/JavaWOJSPServlet"/>
 	<classpathentry exported="true" kind="con" path="WOFramework/JavaXML"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="WOFramework/ERTaggable"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
