change the default encoding from UTF-16BE to UTF-16

--- a/Frameworks/D2W/ERModernDirectToWeb/.settings/org.eclipse.core.resources.prefs
+++ b/Frameworks/D2W/ERModernDirectToWeb/.settings/org.eclipse.core.resources.prefs
@@ -1,10 +1,10 @@
 eclipse.preferences.version=1
-encoding//Resources/Dutch.lproj=UTF-16BE
-encoding//Resources/English.lproj=UTF-16BE
-encoding//Resources/French.lproj=UTF-16BE
-encoding//Resources/German.lproj=UTF-16BE
-encoding//Resources/Italian.lproj=UTF-16BE
-encoding//Resources/Japanese.lproj=UTF-16BE
-encoding//Resources/Norwegian.lproj=UTF-16BE
-encoding//Resources/Portuguese_BR.lproj=UTF-16BE
+encoding//Resources/Dutch.lproj=UTF-16
+encoding//Resources/English.lproj=UTF-16
+encoding//Resources/French.lproj=UTF-16
+encoding//Resources/German.lproj=UTF-16
+encoding//Resources/Italian.lproj=UTF-16
+encoding//Resources/Japanese.lproj=UTF-16
+encoding//Resources/Norwegian.lproj=UTF-16
+encoding//Resources/Portuguese_BR.lproj=UTF-16
 encoding/<project>=UTF-8
