Modify wonder's oracle dateTime prototype to use TIMESTAMP as the external data type.

--- a/Frameworks/Core/ERPrototypes/Resources/erprototypes.eomodeld/EOJDBCOraclePrototypes.plist
+++ b/Frameworks/Core/ERPrototypes/Resources/erprototypes.eomodeld/EOJDBCOraclePrototypes.plist
@@ -56,7 +56,7 @@
         }, 
         {
             columnName = ""; 
-            externalType = DATE; 
+            externalType = TIMESTAMP; 
             name = dateTime; 
             valueClassName = NSCalendarDate; 
             valueType = T; 
