--- a/Frameworks/Core/ERJars/.classpath
+++ b/Frameworks/Core/ERJars/.classpath
@@ -65,16 +65,8 @@
 			<attribute name="javadoc_location" value="jar:platform:/resource/ERJars/LibraryJavadocs/httpmime-4.5.2-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="Libraries/slf4j-log4j12-1.7.21.jar" sourcepath="LibrarySources/slf4j-log4j12-1.7.21-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/ERJars/LibraryJavadocs/slf4j-log4j12-1.7.21-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="Libraries/slf4j-api-1.7.21.jar" sourcepath="LibrarySources/slf4j-api-1.7.21-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/ERJars/LibraryJavadocs/slf4j-api-1.7.21-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="Libraries/slf4j-api-1.7.25.jar"/>
+	<classpathentry exported="true" kind="lib" path="Libraries/slf4j-log4j12-1.7.25.jar"/>
 	<classpathentry exported="true" kind="lib" path="Libraries/ognl-3.1.10.jar" sourcepath="LibrarySources/ognl-3.1.10-sources.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="jar:platform:/resource/ERJars/LibraryJavadocs/ognl-3.1.10-javadoc.jar!/"/>
