--- a/Tests/pom.xml
+++ b/Tests/pom.xml
@@ -16,7 +16,6 @@
 		<module>ERXTest</module>
 		<module>TestAdaptor</module>
 		<module>PluginTest</module>
-		<!-- Disable the ERModernMoviesTest module temporarily -->
-		<!--<module>ERModernMoviesTest</module>-->
+		<module>ERModernMoviesTest</module>
 	</modules>
 </project>
