--- a/Frameworks/EOF/ERJGroupsSynchronizer/.classpath
+++ b/Frameworks/EOF/ERJGroupsSynchronizer/.classpath
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="Sources"/>
-	<classpathentry kind="lib" path="Libraries/jgroups-3.6.9.Final.jar" sourcepath="LibrarySources/jgroups-3.6.9.Final-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="http://www.jgroups.org/javadoc"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="Libraries/jgroups-3.6.14.Final.jar"/>
 	<classpathentry exported="true" kind="con" path="WOFramework/ERExtensions"/>
 	<classpathentry exported="true" kind="con" path="WOFramework/ERJars"/>
 	<classpathentry exported="true" kind="con" path="WOFramework/JavaEOAccess"/>
