Add JavaSolrAdaptor project, a complete EOAdaptor implementation for Apache Solr.

--- a/Frameworks/EOAdaptors/pom.xml
+++ b/Frameworks/EOAdaptors/pom.xml
@@ -15,5 +15,6 @@
 		<module>JavaLuceneAdaptor</module>
 		<module>JavaMemoryAdaptor</module>
 		<module>JavaNeo4JAdaptor</module>
+		<module>JavaSolrAdaptor</module>
 	</modules>
 </project>
