--- a/pom.xml
+++ b/pom.xml
@@ -785,6 +785,11 @@
                 <artifactId>json-simple</artifactId>
                 <version>1.1.1</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.solr</groupId>
+                <artifactId>solr-solrj</artifactId>
+                <version>6.1.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
