--- a/Frameworks/Core/ERPrototypes/Resources/erprototypes.eomodeld/EOJDBCPostgresqlPrototypes.plist
+++ b/Frameworks/Core/ERPrototypes/Resources/erprototypes.eomodeld/EOJDBCPostgresqlPrototypes.plist
@@ -435,7 +435,7 @@
             columnName = ""; 
             externalType = varchar; 
             factoryMethodArgumentType = EOFactoryMethodArgumentIsNSString; 
-            name = globalUUID; 
+            name = uniqueGlobalID; 
             valueClassName = "de.htgreenline.divas.core.eof.EOUniqueGlobalID"; 
             valueFactoryMethodName = fromString; 
             width = 255; 
@@ -489,7 +489,7 @@
         varchar255, 
         varchar50, 
         varcharLarge, 
-        globalUUID
+        uniqueGlobalID
     ); 
     fetchSpecificationDictionary = {}; 
     internalInfo = {
