--- a/Frameworks/Core/ERJars/.classpath
+++ b/Frameworks/Core/ERJars/.classpath
@@ -20,11 +20,7 @@
 			<attribute name="javadoc_location" value="jar:platform:/resource/ERJars/LibraryJavadocs/commons-codec-1.11-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="Libraries/commons-cli-1.3.1.jar" sourcepath="LibrarySources/commons-cli-1.3.1-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/ERJars/LibraryJavadocs/commons-cli-1.3.1-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="Libraries/commons-cli-1.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="Libraries/commons-io-2.6.jar" sourcepath="LibrarySources/commons-io-2.6-sources.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="jar:platform:/resource/ERJars/LibraryJavadocs/commons-io-2.6-javadoc.jar!/"/>
@@ -40,36 +36,16 @@
 			<attribute name="javadoc_location" value="jar:platform:/resource/ERJars/LibraryJavadocs/commons-logging-1.2-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="Libraries/httpclient-4.5.5.jar" sourcepath="LibrarySources/httpclient-4.5.5-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/ERJars/LibraryJavadocs/httpclient-4.5.5-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="Libraries/httpclient-cache-4.5.5.jar" sourcepath="LibrarySources/httpclient-cache-4.5.5-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/ERJars/LibraryJavadocs/httpclient-cache-4.5.5-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="Libraries/httpcore-4.4.9.jar" sourcepath="LibrarySources/httpcore-4.4.9-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/ERJars/LibraryJavadocs/httpcore-4.4.9-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="Libraries/httpcore-nio-4.4.9.jar" sourcepath="LibrarySources/httpcore-nio-4.4.9-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/ERJars/LibraryJavadocs/httpcore-nio-4.4.9-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="Libraries/httpclient-4.5.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="Libraries/httpclient-cache-4.5.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="Libraries/httpcore-4.4.10.jar"/>
+	<classpathentry exported="true" kind="lib" path="Libraries/httpcore-nio-4.4.10.jar"/>
 	<classpathentry exported="true" kind="lib" path="Libraries/fluent-hc-4.5.5.jar" sourcepath="LibrarySources/fluent-hc-4.5.5-sources.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="jar:platform:/resource/ERJars/LibrarySources/fluent-hc-4.5.5-sources.jar!/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="Libraries/httpmime-4.5.5.jar" sourcepath="LibrarySources/httpmime-4.5.5-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/ERJars/LibraryJavadocs/httpmime-4.5.5-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="Libraries/httpmime-4.5.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="Libraries/slf4j-log4j12-1.7.25.jar" sourcepath="LibrarySources/slf4j-log4j12-1.7.25-sources.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="jar:platform:/resource/ERJars/LibraryJavadocs/slf4j-log4j12-1.7.25-javadoc.jar!/"/>
