--- a/Frameworks/Core/ERPrototypes/Resources/erprototypes.eomodeld/EOJDBCMySQLPrototypes.plist
+++ b/Frameworks/Core/ERPrototypes/Resources/erprototypes.eomodeld/EOJDBCMySQLPrototypes.plist
@@ -418,6 +418,16 @@
             factoryMethodArgumentType = EOFactoryMethodArgumentIsNSString; 
             name = stringType; 
             width = 1024; 
+        }, 
+        {
+            adaptorValueConversionMethodName = asString; 
+            columnName = ""; 
+            externalType = VARCHAR; 
+            factoryMethodArgumentType = EOFactoryMethodArgumentIsNSString; 
+            name = uniqueGlobalID; 
+            valueClassName = "de.htgreenline.divas.core.eof.EOUniqueGlobalID"; 
+            valueFactoryMethodName = fromString; 
+            width = 255; 
         }
     ); 
     className = EOGenericRecord; 
@@ -466,7 +476,8 @@
         varchar16, 
         varchar255, 
         varchar50, 
-        varcharLarge
+        varcharLarge, 
+        uniqueGlobalID
     ); 
     fetchSpecificationDictionary = {}; 
     internalInfo = {
