--- a/Frameworks/Reporting/ERJasperReports/.classpath
+++ b/Frameworks/Reporting/ERJasperReports/.classpath
@@ -24,7 +24,7 @@
 	<classpathentry exported="true" kind="lib" path="Libraries/jcommon-1.0.15.jar"/>
 	<classpathentry exported="true" kind="lib" path="Libraries/xml-apis.jar"/>
 	<classpathentry exported="true" kind="lib" path="Libraries/iText-2.1.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="Libraries/poi-3.5-FINAL-20090928.jar"/>
+	<classpathentry exported="true" kind="lib" path="Libraries/poi-4.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="Libraries/jpa.jar"/>
 	<classpathentry exported="true" kind="lib" path="Libraries/xml-apis-ext.jar"/>
 	<classpathentry exported="true" kind="lib" path="Libraries/jasperreports-4.7.0.jar"/>
