--- a/Frameworks/Core/ERPrototypes/Resources/erprototypes.eomodeld/EOJDBCPostgresqlPrototypes.plist
+++ b/Frameworks/Core/ERPrototypes/Resources/erprototypes.eomodeld/EOJDBCPostgresqlPrototypes.plist
@@ -418,10 +418,16 @@
             valueFactoryMethodName = fromString; 
         }, 
         {
+            adaptorValueConversionClassName = "er.extensions.eof.ERXStringType"; 
+            adaptorValueConversionMethodName = typeToString; 
             columnName = ""; 
             externalType = varchar; 
             factoryMethodArgumentType = EOFactoryMethodArgumentIsNSString; 
             name = stringType; 
+            valueClassName = "er.extensions.eof.ERXStringType"; 
+            valueFactoryClassName = "er.extensions.eof.ERXStringType"; 
+            valueFactoryMethodName = typeFromString; 
+            valueType = c; 
             width = 1024; 
         }, 
         {
