move ERMODListThreadPage, ERMODLongResponsPage to ERModernLook framework add missing component files (html, wod, woo, css, icons) for ERMODListThreadPage, ERMODLongResponsPage add missing component ERMDThreadMonitor to ERModernDirectToWeb framework add localization move ERMDLongResponsePageDelegate back to Divas

--- a/Frameworks/D2W/ERModernLook/.settings/org.eclipse.core.resources.prefs
+++ b/Frameworks/D2W/ERModernLook/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
+encoding//Resources/English.lproj=UTF-16
+encoding//Resources/German.lproj=UTF-16
 encoding/<project>=UTF-8
