Revert "remove unnecessary value class name"
This reverts commit 6f9b545f8d96141d00b6f45dd449db277d06ae8d.

--- a/Frameworks/Core/ERPrototypes/Resources/erprototypes.eomodeld/EOJDBCPrototypes.plist
+++ b/Frameworks/Core/ERPrototypes/Resources/erprototypes.eomodeld/EOJDBCPrototypes.plist
@@ -415,6 +415,7 @@
             externalType = varchar; 
             factoryMethodArgumentType = EOFactoryMethodArgumentIsNSString; 
             name = stringType; 
+            valueClassName = "er.extensions.eof.ERXStringType"; 
             valueFactoryClassName = "er.extensions.eof.ERXStringType"; 
             valueFactoryMethodName = typeFromString; 
             valueType = c; 
