--- a/Frameworks/Core/ERPrototypes/Resources/erprototypes.eomodeld/EOJDBCOraclePrototypes.plist
+++ b/Frameworks/Core/ERPrototypes/Resources/erprototypes.eomodeld/EOJDBCOraclePrototypes.plist
@@ -410,6 +410,7 @@
             externalType = VARCHAR2; 
             factoryMethodArgumentType = EOFactoryMethodArgumentIsNSString; 
             name = stringType; 
+            valueClassName = "er.extensions.eof.ERXStringType"; 
             valueFactoryClassName = "er.extensions.eof.ERXStringType"; 
             valueFactoryMethodName = typeFromString; 
             valueType = c; 
